# cmp-test-suite

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CODEOFCONDUCT.md  CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MISSING_SUPPORT_TEMPLATE.md  Makefile  Makefile_EJBCA  MockCA_readme.md  Output.md  PULL_REQUEST_TEMPLATE.md  REFERENCES.md  REUSE.toml  SERVER_TEST_COVERAGE.md  SUPPORT.md  TODOs.md  about_pq.md  about_suite.md  cmp_issues_and_proposals.md  generate_xmss_keys.py  output.md  pq_test.py  pyproject.toml  pyrightconfig.json  readme.md  requirement-mock.txt  requirements-dev.txt  requirements-vis.txt  requirements.txt  ruff.toml  test_catalyst.py  test_load_pqc.py  validation_pem_files.txt  vis_pqc_verify.py  {8a55265c-1a9a-11f0-be2c-00410ee53b55}
client_tests/: README.md  client_basic_exp.robot  cmp_client.py  cmp_client_tests_grouped.robot  cmp_tests_jinja.robot
config/: cloudpki.robot  ejbca.robot  local.robot  localak.robot  mock_ca.robot  playground.robot  test_suite_config.yaml
data/: cert-nosig.pem  cmp-sample-reject.pem  csr-rsa.pem  dummy-cert.pem  example-cmp-response-accept.pem  example-csr.pem  example-p10cr-rufus.pem  example-p10r.pkimessage  example-p10rp-rufus.pem  example-request-ir.pem  example-response-error-implicitConfirm.pem  example-response-p10rp-cert.pem  example-response-unsupported-algo.pem  example-rufus-01-p10cr.pem  example-rufus-02-certConf.pem  ir_ml_kem_768.der  kem_recip_info_example.json  private-key-ed25519.raw  private-key-rsa.pem  req-ir.pkimessage  req-p10cr-prot_none-pop_sig-dilithium.pkimessage  sun_hybrid_example.json
doc/: asn1utils.html  certutils.html  cmputils.html  cryptoutils.html  httputils.html  index.html  keyutils.html  keywords.html  macprotection.html  protectionutils.html  tests-suites.html  verifyingutils.html
embeddedCMP/: CMakeLists.txt  CODEOWNERS  LICENSE.txt  README.md
embeddedCMP/docs/: HOWTO.md
embeddedCMP/include/: cmpcl.h  cmpcl_error.h  cmpcl_int.h  debug_macros.h
embeddedCMP/program/: CMakeLists.txt  cmp_main.c  cmpclient.c  cmpclient.h  cmpclient_config.h  credential_storage.c  credential_storage.h  mbedtls_transport.c  mbedtls_transport.h
embeddedCMP/resources/certs/docker_ejbca/trusted/: trusted.crt
embeddedCMP/resources/certs/insta/trusted/: prot_ca.crt
embeddedCMP/resources/certs/local_ra_lra/certs/: client.csr  client_cert.pem  csr_p10cr-client-3.pem
embeddedCMP/resources/certs/local_ra_lra/protection/: CMP_EE_Cert.pem  CMP_EE_Key.pem
embeddedCMP/resources/certs/local_ra_lra/tlssrv/: clientcert.crt  clientkey.key  srvcrt.crt
embeddedCMP/resources/certs/netguard/: ee_cert.pem  ee_chain.pem  ee_priv.pem  srv_cert.pem
embeddedCMP/resources/certs/playground/protection/: CMP_EE_Cert.pem  CMP_EE_Chain.pem  CMP_EE_Key.pem
embeddedCMP/resources/certs/playground/tlssrv/: clientcert.crt  clientkey.key
embeddedCMP/resources/certs/playground/trusted/: enr_ca.crt
mock_ca/: announcement_handler.py  ca_handler.py  cert_conf_handler.py  cert_req_handler.py  challenge_handler.py  client.py  db_config_vars.py  general_msg_handler.py  hybrid_handler.py  mock_fun.py  nested_handler.py  nestedutils.py  operation_dbs.py  prot_handler.py  rev_handler.py  stfl_validator.py
pq_logic/: __init__.py  chempatkem.py  combined_factory.py  composite_factory.py  custom_oids.py  hybrid_issuing.py  hybrid_key_factory.py  hybrid_oidutils.py  hybrid_prepare.py  hybrid_structures.py  kem_mechanism.py  key_pyasn1_utils.py  migration_types.py  migration_typing.py  pq_compute_utils.py  pq_key_factory.py  pq_structureutils.py  pq_utils.py  pq_validation_utils.py  pq_verify_logic.py  py_verify_logic.py  stat_utils.py  tmp_fun.py  tmp_mapping.py  tmp_oids.py  trad_key_factory.py  trad_typing.py
resources/: __init__.py  announcement.py  asn1_structures.py  asn1dump.py  asn1mutate.py  asn1utils.py  ca_kga_logic.py  ca_ra_utils.py  castutils.py  cert_linters_utils.py  cert_related_utils.py  certbuildutils.py  certextractutils.py  certutils.py  checkutils.py  cmp_enums.py  cmputils.py  compareutils.py  convert_pyasn1_cryptography_utils.py  convertutils.py  copyasn1utils.py  cryptoutils.py  data_objects.py  deprecatedutils.py  envdatautils.py  errorutils.py  exceptions.py  extra_issuing_logic.py  general_msg_utils.py  httputils.py  keyutils.py  keywords.resource  mac_protection.py  modifyutils.py  oid_mapping.py  oidutils.py  pki_message_enums.py  pkimsg_utils.py  prepare_alg_ids.py  prepareutils.py  (+10 more)
script/: output_tags.txt
scripts/: add_licenses.py  add_liecense.py  addlicense.sh  compare_tags.py  docker_entrypoint.py  docstring-check.py  exception-keywords.txt  gen_test_case_utils.py  generate_alg_test_cases.py  generate_cert_request_verbose_tests.py  generate_gen_msg_test_cases.py  generate_mac_test_cases.py  generate_pki_prot_tests.py  generate_pq_stfl_test_cases.py  generate_xmss_keys.py  get_tags.py  run_openssl.py  setup_pq.sh  smoke.robot  verbose_test_dataclasses.py  vis_pqc_verify.py  write_stats.py
tests/: Requirements  basic.robot  cert_conf_tests.robot  cmp.robot  cross_certification.robot  deprecated.robot  extra_issuing.robot  kga.robot  lwcmp.robot  mac_alg_pki_prot_tests.robot  pki_mgmt_entity_op.robot  revocation_tests.robot  smoke.robot  support_messages.robot  trad_alg_pki_prot_tests.robot  verbose_cert_req_msg_tests.robot  verbose_cert_request_tests.robot  verbose_gen_msg_checks.robot
tests_mock_ca/: migration.robot
tests_pq_and_hybrid/: composite_sig_alg_tests.robot  hybrid_sig_chameleon.robot  hybrid_sig_tests.robot  kem_alg.robot  kem_tests.robot  pq_sig_alg.robot  pq_sig_pkiprotection.robot  pq_sig_tests.robot  pq_stateful_sig_alg.robot  pq_stateful_sig_tests.robot  rfc9783_related_certs.robot  tests_todo.robot
tests_structured/: Documetation_active_test_suite.md  EnrollingEndEntity.robot  Generic.robot  Orga_help.md  PKIManagementEntityOperations.robot  PKIStatusInfo_ErrorMessages.robot  Requirements  Requirements.md  Section411.robot  Structure.md  Structure_TestSuite.md  about_suite.md  output_tags.md
tests_untested/: hybrid_kem_tests.robot  (+3 more)
(+1038 files in other folders)
