# SPDX-FileCopyrightText: Copyright 2024 Siemens AG
#
# SPDX-License-Identifier: Apache-2.0
[project]
name = "cmp-test-suite"
version = "0.0.2"
description = "CMP Protocol Compliance Test Suite"
requires-python = ">=3.11"
dependencies = [
    "cryptography==46.0.5",
    "pyasn1==0.6.2",
    "pyasn1-alt-modules==0.4.9",
    "robotframework==7.4.2",
    "pkilint==0.13.2",
    "robotframework-requests==0.9.7",
    "pycryptodome==3.23.0",
    "tinyec==0.4.0",
    "bitstring==4.3.1",
    "pyhsslms==2.0.0",
    "Flask==3.1.3",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "safety>=3.7.0,<4.0.0",
    "pylint>=4.0.4,<5.0.0",
    "ruff>=0.15.5,<1.0.0",
    "robotframework-robocop==8.2.2",
    "pyright[nodejs]==1.1.408",
    "codespell==2.4.2",
    "reuse==6.2.0",
]
pq = [
    # Post-quantum cryptography support
    # Note: Requires system dependencies (libssl-dev, cmake)
    # Install with: uv pip install -e ".[pq]"
    # The package name in the repo metadata is 'liboqs-python' not 'liboqs-python-stateful-sig'
    "liboqs-python @ git+https://github.com/Guiliano99/liboqs-python-stateful-sig.git",
]

[tool.robotidy]
diff = true
overwrite = false
verbose = true
separator = "space"
spacecount = 4
line_length = 120
lineseparator = "native"
skip_gitignore = false
ignore_git_dir = false
src = [
    "./resources/keywords.resource",
    "./tests"
]
configure = [
    "AddMissingEnd:enabled=True",
    "NormalizeSeparators:enabled=True",
    "DiscardEmptySections:enabled=True",
    "MergeAndOrderSections:enabled=True",
    "RemoveEmptySettings:enabled=True",
    "ReplaceEmptyValues:enabled=False",
    "ReplaceWithVAR:enabled=True",
    "NormalizeAssignments:enabled=True",
    "GenerateDocumentation:enabled=False",
    "OrderSettings:enabled=True",
    "OrderSettingsSection:enabled=True",
    "NormalizeTags:enabled=False", # maybe set to true.
    "OrderTags:enabled=True",
    "RenameVariables:enabled=False",
    "IndentNestedKeywords:enabled=True",
    "AlignSettingsSection:enabled=True",
    "AlignVariablesSection:enabled=True",
    "AlignTemplatedTestCases:enabled=False",
    "AlignTestCasesSection:alignment_type=auto",
    "AlignKeywordsSection:enabled=False",
    "NormalizeNewLines:enabled=True",
    "NormalizeSectionHeaderName:enabled=True",
    "NormalizeSettingName:enabled=True",
    "ReplaceRunKeywordIf:enabled=True",
    "SplitTooLongLine:split_on_every_setting_arg =True",
    "SmartSortKeywords:enabled=False",
    "RenameTestCases:enabled=False",
    "RenameKeywords:enabled=True",
    "ReplaceReturns:enabled=True",
    "ReplaceBreakContinue:enabled=True",
    "InlineIf:enabled=True",
    "Translate:enabled=False",
    "NormalizeComments:enabled=True",
    "RenameKeywords:replace_pattern=Cmp:replace_to=CMP",
    "RenameKeywords:replace_pattern=cmp:replace_to=CMP",
    "RenameKeywords:replace_pattern=TransactionID:replace_to=transactionID",
    "RenameKeywords:replace_pattern=SenderNonce:replace_to=senderNonce",
    "RenameKeywords:replace_pattern=SenderKID:replace_to=senderKID",
    "RenameKeywords:replace_pattern=RecipNonce:replace_to=recipNonce",
    "RenameKeywords:replace_pattern=MessageTime:replace_to=messageTime",
    "RenameKeywords:replace_pattern=GeneralInfo:replace_to=generalInfo",
    "RenameKeywords:replace_pattern=ProtectionAlg:replace_to=protectionAlg",
]