# SPDX-FileCopyrightText: Copyright 2024 Siemens AG
#
# SPDX-License-Identifier: Apache-2.0
[project]
name = "cmp-test-suite"
version = "0.0.2"
description = "CMP Protocol Compliance Test Suite"
requires-python = ">=3.13"
dependencies = [
    "cryptography==46.0.7",
    "pyasn1==0.6.3",
    "pyasn1-alt-modules==0.4.10",
    "robotframework==7.4.2",
    "pkilint==0.13.2",
    "robotframework-requests==0.9.7",
    "pycryptodome==3.23.0",
    "tinyec==0.4.0",
    "bitstring==4.4.0",
    "pyhsslms==2.0.0",
    # relevant for the Mock-CA.
    "Flask==3.1.3",
    # relevant for the CMP client tests.
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "safety>=3.7.0,<4.0.0",
    "pylint>=4.0.4,<5.0.0",
    "ruff>=0.15.9,<1.0.0",
    "robotframework-robocop==8.2.6",
    "pyright[nodejs]==1.1.408",
    "codespell==2.4.2",
    "reuse==6.2.0",
]
pq = [
    # Post-quantum cryptography support
    # Note: Requires system dependencies (libssl-dev, cmake)
    # Install with: uv pip install -e ".[pq]"
    # The package name in the repo metadata is 'liboqs-python' not 'liboqs-python-stateful-sig'
    "liboqs-python @ git+https://github.com/Guiliano99/liboqs-python-stateful-sig.git",
]
